// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja hWeXJB"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja hBeyCi"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR fFLKkM"
      disabled={true}
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gkQWho"
          disabled={true}
          placeholder=" "
          type="number"
          value="123"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja kgQYKT"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja dcBYZM"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja hKptEy"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP kejpnc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja hWeXJB"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja hBeyCi"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gkQWho"
          placeholder=" "
          readOnly={true}
          type="number"
          value="1234"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja hWeXJB"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja hBeyCi"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gkQWho"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja hWeXJB"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja hBeyCi"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gkQWho"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-gdfmja hWeXJB"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-gdfmja hBeyCi"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gkQWho"
          dir="rtl"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-bsixGQ duuJYT"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <input
        className="sc-gdfmja hWeXJB"
        placeholder="medium e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <input
        className="sc-gdfmja hBeyCi"
        placeholder="large e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF guTWqk"
      >
        <input
          className="sc-gdfmja gYxdLV"
          placeholder="xlarge e.g. 1234"
          type="number"
        />
        <label
          className="sc-bsixGQ ioewyE"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        medium
      </label>
      <input
        className="sc-gdfmja jlSeLq"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <label
        className="sc-dAKPfc dlKDdg"
      >
        large
      </label>
      <input
        className="sc-gdfmja akAkd"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-htiqpR evhpgi"
    >
      <div
        className="sc-fkFYRF hgXxgX"
      >
        <input
          className="sc-gdfmja gkQWho"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="sc-bsixGQ ioewyE"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jVCNtP eydFFY"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
